# dgrammar

./: .gitignore  Cargo.toml  PLAN.md  README.md  compute_table1.py  eval_dgrammar.py  main.py  modal_bench.py  modal_dfa_bench.py  modal_dgrammar_timed.py  modal_igcd_bench.py  modal_lave_bench.py  modal_math_hard.py  modal_reject_hard.py  modal_soft_bench.py  modal_soft_hard.py  modal_tp_bench.py  modal_typemask_bench.py  modal_v2_async_timed.py  modal_v2_bench.py  modal_v2_timed.py  pyproject.toml  run_benchmarks.sh  run_dfa_eval.py  run_dgrammar_eval.py  run_dgrammar_timed.py  run_lave_timed.py  run_math_hard.py  run_soft_eval.py  run_soft_hard.py  run_typemask_eval.py  run_v2_async_timed.py  run_v2_eval.py  run_v2_timed.py  test_prefilter.py
bench/: eval_results.py  jsb_dataset.py  modal_bench.py  modal_dgrammar_bench.py  modal_igcd_bench.py  modal_lave_bench.py  run_dgrammar_timed.py  run_igcd_timed.py  run_lave_timed.py
dgrammar/: __init__.py  baselines.py  checker.py  decode.py  eval.py  generate.py  generate_dgrammar.py  generate_v2.py  grammar.py  lexmap.py  models.py  token_dfa.py  type_mask.py  validators.py
probe/: extract_hidden_states.py  modal_extract.py  modal_seed_rerank.py  train_probe.py
results/: adagram_v2_jsonschema_s0_t128.jsonl  adagram_v2_jsonschema_s0_t128_full.jsonl  adagram_v2_jsonschema_s0_t128_off102.jsonl  adagram_v2_jsonschema_s0_t128_off136.jsonl  adagram_v2_jsonschema_s0_t128_off170.jsonl  adagram_v2_jsonschema_s0_t128_off20.jsonl  adagram_v2_jsonschema_s0_t128_off204.jsonl  adagram_v2_jsonschema_s0_t128_off238.jsonl  (+121 more)
src/: lib.rs  (+2 more)
(+105 files in other folders)
